fixed ordering issue on list-group items

--- a/output/team.html
+++ b/output/team.html
@@ -30,35 +30,35 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: trisha@trisha.com</li>
-            <li class="list-group-item">Email: <a href="mailto:3">3</a></li>
-            <li class="list-group-item">Office number: undefined</li>
+            <li class="list-group-item">ID: 1</li>
+            <li class="list-group-item">Email: <a href="mailto:trisha@trisha.com">trisha@trisha.com</a></li>
+            <li class="list-group-item">Office number: 1</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">cat</h2>
+        <h2 class="card-title">Cat</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: cat@cat.com</li>
-            <li class="list-group-item">Email: <a href="mailto:cat25">cat25</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/undefined" target="_blank" rel="noopener noreferrer">undefined</a></li>
+            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item">Email: <a href="mailto:cat@cat.com">cat@cat.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/catcat25" target="_blank" rel="noopener noreferrer">catcat25</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">dog</h2>
+        <h2 class="card-title">Dog</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: dog@dog.com</li>
-            <li class="list-group-item">Email: <a href="mailto:DoggyU">DoggyU</a></li>
-            <li class="list-group-item">School: undefined</li>
+            <li class="list-group-item">ID: 3</li>
+            <li class="list-group-item">Email: <a href="mailto:dog@dog.com">dog@dog.com</a></li>
+            <li class="list-group-item">School: DogU</li>
         </ul>
     </div>
 </div>
