--- a/output/team.html
+++ b/output/team.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 jumbotron mb-3 team-heading">
+            <div class="col-12 jumbotron mb-3 team-heading bg-primary text-white">
                 <h1 class="text-center">My Team</h1>
             </div>
         </div>
@@ -23,21 +23,21 @@
     <div class="container">
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
-                <div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Trisha</h2>
-        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    <div class="card employee-card">
+        <div class="card-header bg-primary text-white">
+            <h2 class="card-title">Trisha</h2>
+            <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+        </div>
+        <div class="card-body">
+            <ul class="list-group">
+                <li class="list-group-item">ID: 1</li>
+                <li class="list-group-item">Email: <a href="mailto:trisha@trisha.com">trisha@trisha.com</a></li>
+                <li class="list-group-item">Office number: 1</li>
+            </ul>
+        </div>
     </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 1</li>
-            <li class="list-group-item">Email: <a href="mailto:trisha@trisha.com">trisha@trisha.com</a></li>
-            <li class="list-group-item">Office number: 1</li>
-        </ul>
-    </div>
-</div>
 <div class="card employee-card">
-    <div class="card-header">
+    <div class="card-header bg-primary text-white">
         <h2 class="card-title">Cat</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
@@ -50,7 +50,7 @@
     </div>
 </div>
 <div class="card employee-card">
-    <div class="card-header">
+    <div class="card-header bg-primary text-white">
         <h2 class="card-title">Dog</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
